add function: moveSheetToFirstPosition